cambios rutas imagenes

--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
             <h1 class="presentacion__titulo">Mi nombre es Edgard y soy Front - End Designer</h1>
             <p class="presentacion__subtitulo">  Estoy formado en redes y tecnologias, actualmente estoy participando del proyecto Oracle ONE en Alura Latam.</p>
              <ul class="redes">
-                <li class="redes__img"><a href="">Github <img src="/imagenes/github.png" alt="Logo de Github"></a></li>
-                <li class="redes__img"><a href="">Linkedin <img src="/imagenes/linkedin.png" alt="Logo de linkedin"></a></li>
-                <li class="redes__img"><a href="">Instagram <img src="/imagenes/instagram.png" alt="Logo de Instagram"></a></li>
-                <li class="redes__img" ><a href="">Twitter <img src="/imagenes/twitter.png" alt="logo Twitter"></a></li>
+                <li class="redes__img"><a href="">Github <img src="./imagenes/github.png" alt="Logo de Github"></a></li>
+                <li class="redes__img"><a href="">Linkedin <img src="./imagenes/linkedin.png" alt="Logo de linkedin"></a></li>
+                <li class="redes__img"><a href="">Instagram <img src="./imagenes/instagram.png" alt="Logo de Instagram"></a></li>
+                <li class="redes__img" ><a href="">Twitter <img src="./imagenes/twitter.png" alt="logo Twitter"></a></li>
 
              </ul>
         </div>
@@ -65,7 +65,7 @@
     <section class=" sobre__mi" id="sobre" >
             <h2 class="sobre__mi__titulo" >Sobre mi</h2>
             <p class="sobre__mi__titulo__texto" >Hola! Soy de Peru, soy un apasionado por la programación. Llevo 8 meses estudiando desarrollo frontend y he descubierto que tengo una habilidad natural para aprender rápido y adaptarme a cualquier entorno o situación. Me encanta resolver problemas y crear soluciones innovadoras. Me emociona esta nueva etapa y espero seguir creciendo.</p>
-            <img class="sobre__mi__firma" src="/imagenes/signature.png" alt="firma">
+            <img class="sobre__mi__firma" src="./imagenes/signature.png" alt="firma">
 
     </section>    
 
@@ -114,21 +114,21 @@
         <h2 class="formacion__titulo">Formación académica</h2>
         <ul class="formacion__lista" >
             <li >
-               <img src="/imagenes/INSTITU.fw.png" alt="">
+               <img src="./imagenes/INSTITU.fw.png" alt="">
                <div class="formacion__descripcion" >
                     <h3 class="formacion__nombre" >Informática</h3>
                     <p class="formacion__detalle">2003 - I.S.P.M</p>
                </div>
             </li>
             <li>
-                <img src="/imagenes/garcilazo.fw.png" alt="">
+                <img src="./imagenes/garcilazo.fw.png" alt="">
                 <div class="formacion__descripcion">
                     <h3 class="formacion__nombre" >Redes y tecnologias</h3>
                     <p class="formacion__detalle" >2008 - U.I.G.V</p>
                 </div>
             </li>
             <li class="formacion__elemento">
-                <img src="/imagenes/uni.fw.png" alt="">
+                <img src="./imagenes/uni.fw.png" alt="">
                 <div class="formacion__descripcion">
                     <h3 class="formacion__nombre">Configuracion Equipos</h3>
                     <p class="formacion__detalle">2010 - INFOUNI</p>
@@ -139,7 +139,7 @@
 
      <!-- Seccion experiencia profesional -->
 <section id="experience" class="scroll-animation scroll-animation-visible">
-    <h2 class="section-title">Experiencia</h2>
+    <h2 class="section-title"> Experiencia </h2>
     <div class="experience-container">
         <!-- Proyecto 1: Imagen derecha, texto izquierda -->
         <div class="experience-item">
