cambios imagen ruta contacto

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
     <div class="contacto-container">
        <div class="contacto-item">
             <div class="image__contacto">
-                <img src="imagenes/contacto-llamado.fw.png" alt="Imagen encontrar el número secreto">
+                <img src="./imagenes/contacto-llamado.fw.png" alt="Imagen encontrar el número secreto">
             </div> 
             <div class="description">
                <h3>Contacto</h3>
