cambios boton redes

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
             <h1 class="presentacion__titulo">Mi nombre es Edgard y soy Front - End Designer</h1>
             <p class="presentacion__subtitulo">  Estoy formado en redes y tecnologias, actualmente estoy participando del proyecto Oracle ONE en Alura Latam.</p>
              <ul class="redes">
-                <li class="redes__img"><a href="">Github <img src="./imagenes/github.png" alt="Logo de Github"></a></li>
-                <li class="redes__img"><a href="">Linkedin <img src="./imagenes/linkedin.png" alt="Logo de linkedin"></a></li>
+                <li class="redes__img"><a href="https://github.com/EdgardRamosB" target="_blank">Github <img src="./imagenes/github.png" alt="Logo de Github"></a></li>
+                <li class="redes__img"><a href="https://www.linkedin.com/in/edgard-ramos-becerra/" target="_blank">Linkedin <img src="./imagenes/linkedin.png" alt="Logo de linkedin"></a></li>
                 <li class="redes__img"><a href="">Instagram <img src="./imagenes/instagram.png" alt="Logo de Instagram"></a></li>
                 <li class="redes__img" ><a href="">Twitter <img src="./imagenes/twitter.png" alt="logo Twitter"></a></li>
 
@@ -127,7 +127,7 @@
                     <p class="formacion__detalle" >2008 - U.I.G.V</p>
                 </div>
             </li>
-            <li class="formacion__elemento">
+            <li>
                 <img src="./imagenes/uni.fw.png" alt="">
                 <div class="formacion__descripcion">
                     <h3 class="formacion__nombre">Configuracion Equipos</h3>
@@ -144,7 +144,7 @@
         <!-- Proyecto 1: Imagen derecha, texto izquierda -->
         <div class="experience-item">
             <div class="description">
-                <h3>Encriptador/Desencriptador de texto.</h3>
+                <h3 class="description__subtitulo">Encriptador / Desencriptador</h3>
                 <p class="text-project">La aplicación web permite encriptar y desencriptar mensajes de texto utilizando un conjunto específico de reglas de sustitución de caracteres.</p>
                 <h4>Challenge Oracle</h4> <!-- Cambiado a h4 -->
                 <div class="buttons">
@@ -163,7 +163,7 @@
                 <img src="imagenes/secreto.png" alt="Imagen encontrar el numero secreto">
             </div> 
             <div class="description">
-               <h3>Encuentra el numero secreto</h3>
+               <h3 class="description__subtitulo">Encuentra el numero secreto</h3>
                <p class="text-project">Este proyecto fue realizado para Alura Latam. La aplicación consiste en ingresar un número una determinada cantidad de veces hasta acertar el número secreto.</p>
                <h4>HTML/CSS/JS</h4> <!-- Cambiado a h4 -->
                <div class="buttons">
@@ -175,7 +175,7 @@
         <!-- Proyecto 3: Imagen derecha, texto izquierda -->
         <div class="experience-item">
             <div class="description">
-                <h3>Portafolio Ana Garcia</h3>
+                <h3 class="description__subtitulo">Portafolio Ana Garcia</h3>
                 <p class="text-project">Este fue uno de los trabajos realizados en clases en nuestra introducción al mundo de HTML y CSS. Apenas empezaba en este fascinante mundo.</p>
                 <h4>HTML/CSS</h4> <!-- Cambiado a h4 -->
                 <div class="buttons">
