--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <!-- Sección sobre mí -->
     <section class=" sobre__mi" id="sobre" >
             <h2 class="sobre__mi__titulo" >Sobre mi</h2>
-            <p class="sobre__mi__titulo__texto" >Hola! Soy de Peru, soy un apasionado por la programación. Llevo 8 meses estudiando desarrollo frontend y he descubierto que tengo una habilidad natural para aprender rápido y adaptarme a cualquier entorno o situación. Me encanta resolver problemas y crear soluciones innovadoras. Me emociona esta nueva etapa y espero seguir creciendo.</p>
+            <p class="sobre__mi__titulo__texto" >Hola! Soy de Peru, me gusta la programación y lo relacionado a la tecnologia. Llevo 8 meses estudiando desarrollo frontend y he descubierto que tengo una facilidad para aprender y explorar nuevas habilidades en relacion a mis objetivos.Me emociona esta nueva etapa y espero seguir creciendo.</p>
             <img class="sobre__mi__firma" src="./imagenes/signature.png" alt="firma">
 
     </section>    
