--- a/index.html
+++ b/index.html
@@ -187,6 +187,21 @@
                 <img src="imagenes/portafolio1.png" alt="Imagen del portafolio Ana Garcia">
             </div>
         </div>
+        <!-- Proyecto 4: Imagen izquierda, texto derecha -->
+        <div class="experience-item">
+            <div class="image__expeiencia">
+                <img src="imagenes/AA.fw.png" alt="Imagen encontrar el numero secreto">
+            </div> 
+            <div class="description">
+               <h3 class="description__subtitulo">Una luz en el camino</h3>
+               <p class="text-project">Este proyecto fue realizado para la Comunidad de Alcoholicos Anonimos. La pagina consiste en apoyar a las personas que quieren dejar la bebida facilitandoles los lugares mas cercanos para su recuperacion</p>
+               <h4>HTML/CSS/JS/WORDPRESS</h4> <!-- Cambiado a h4 -->
+               <div class="buttons">
+                    <a href="" target="_blank" class="btn btn-repo">Repositorio</a>
+                    <a href="https://aaunaluzenelcamino.com/" target="_blank" class="btn btn-demo">Ver demo</a>
+               </div>
+            </div>
+       </div>
     </div>
 </section>
 
